--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <div id="img_d_holder">
-                <img id="img_d" src="pic_d.png" alt="A line of chart of the monthly wikipedia views">
+                <img id="img_d" src="pic_d2.png" alt="A line of chart of the monthly wikipedia views">
             </div>
         </div>
 
