--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
     <body>
-    
-        <!-- http://localhost:5500/ -->
+
+        <ul id="navbar">
+            <li><a href="portfolio.com">Home</li>
+            <li><a href="https://github.com/vivaidris">GitHub</li>
+        </ul>
+        
         <h1><span>Parsing and Scraping Wikipedia for Data</span></h1>
         <br>
         <hr>
