--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
 
         <ul id="navbar">
-            <li><a href="portfolio.com">Home</li>
-            <li><a href="https://github.com/vivaidris">GitHub</li>
+            <li><a href="portfolio.com">Home</a></li>
+            <li><a href="https://github.com/vivaidris">GitHub</a></li>
         </ul>
         
         <h1><span>Parsing and Scraping Wikipedia for Data</span></h1>
