--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Document</title>
 </head>
     <body>
-
-        <ul id="navbar">
-            <li><a href="portfolio.com">Home</a></li>
-            <li><a href="https://github.com/vivaidris">GitHub</a></li>
-        </ul>
+        <nav>
+            <ul id="navbar">
+                <li><a href="https://portfolio.com">Home</a></li>
+                <li><a href="https://github.com/vivaidris">GitHub</a></li>
+            </ul>
+        </nav>
         
         <h1><span>Parsing and Scraping Wikipedia for Data</span></h1>
         <br>
