--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav>
             <ul id="navbar">
-                <li><a href="https://portfolio.com">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="https://github.com/vivaidris">GitHub</a></li>
             </ul>
         </nav>
