--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
     <body>
         <nav>
+            <p id="name_2">Idris Sheikh Dibo</p>
             <ul id="navbar">
                 <li><a href="#">Home</a></li>
                 <li><a href="https://github.com/vivaidris">GitHub</a></li>
@@ -21,22 +22,25 @@
 
         <div id="img_holder">
             <div id="img_a_holder">
-                <img id="img_a" src="pic_a.png" alt="A bar chart of how many paragraphs in a range of paragraphs">
+                <img id="img_a" src="bc_a.png" alt="A bar chart of how many paragraphs in a range of paragraphs">
             </div>
 
             <div id="img_b_holder">
-                <img id="img_b" src="pic_b.png" alt="A scatter chart of amount of words per paragraph" width="700" height="500">
+                <img id="img_b" src="sc_a.png" alt="A scatter chart of amount of words per paragraph" width="700" height="500">
             </div>
 
             <div id="img_c_holder">
-                <img id="img_c" src="pic_c.png" alt="A pie chart of the themes of the articles">
+                <img id="img_c" src="pc_a.png" alt="A pie chart of the themes of the articles">
             </div>
 
             <div id="img_d_holder">
-                <img id="img_d" src="pic_d2.png" alt="A line of chart of the monthly wikipedia views">
+                <img id="img_d" src="lc_b.png" alt="A line of chart of the monthly wikipedia views">
             </div>
         </div>
-
+        
+        <div id="name_holder">
+            <p id="name">Idris Sheikh Dibo 2025</p>
+         </div>   
         <script src="script.js"></script>
     </body>
 </html>
