--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         
         <div id="name_holder">
             <p id="name">Idris Sheikh Dibo 2025</p>
-         </div>   
-        <script src="script.js"></script>
+        </div>
+
+        
+         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
