--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="wiki_icon.png">
-    <title>Document</title>
+    <title>Wiki Data</title>
 </head>
     <body>
         <nav>
